Overflow fixes;

--- a/src/containers/Classes/Classes.module.css
+++ b/src/containers/Classes/Classes.module.css
@@ -3,6 +3,7 @@
     flex-direction: row;
     height: 100vh;
     overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .variablesContainer {
